Fix image distortion,implement profile picture

--- a/frontend/src/pages/ExampleProfile.css
+++ b/frontend/src/pages/ExampleProfile.css
@@ -26,7 +26,7 @@
 
 .imageCustom {
     width: 184px;
-    height: 198px;
+    /* height: 198px;  */
     border-radius: 37px;
     opacity: 1;
 }
